# river-rust-queue

./: .gitignore  Cargo.toml  Makefile  README.md  STATUS.md  docker-bake.hcl  skaffold.yaml
.github/workflows/: app-ci.yml
api/proto/: Makefile  buf.gen.yaml  buf.yaml
crates/entry-api/: Cargo.toml
docs/: 00-OVERVIEW.md  01-INVARIANTS.md  01-PROBLEM.md  02-INVARIANTS.md  03-SCALING-AND-AVAILABILITY.md
docs/appendices/: 40-DATA-MODEL.md  41-EVENT-CATALOG.md  42-API-REFERENCE.md  43-BENCHMARK-METHODOLOGY.md  44-FUNDING-MODEL.md  45-GLOSSARY.md
docs/deep-dives/: 20-IDEMPOTENCY.md  21-SAGAS.md  22-ORDERING.md  23-LOCKING.md  24-RESILIENCE.md  25-EVENT-STORE.md  26-OBSERVABILITY.md  27-CACHING.md  28-OPERATIONS.md  29-KUBERNETES.md
docs/deep_dives/: 20-IDEMPOTENCY.md  21-SAGAS.md  25-EVENT-STORE.md
docs/deffered/: 30-CHARGEBACKS.md  31-FX-SETTLEMENT.md  32-KUBERNETES.md  33-MTLS.md
docs/services/: 10-API-GATEWAY.md  11-LEDGER-WORKER.md  11-SAGA-WORKER.md  12-WEBHOOK-WORKER.md  13-FRAUD-WORKER.md  14-RECONCILIATION.md  15-ADMIN-CLI.md  15-ADMIN-DASHBOARD.md  16-MERCHANT-WALLET-LIFECYCLE.md  17-SIMULATION-HARNESS.md  18-CHARGEBACKS.md  24-RESILIENCE.md
go-services/: .gitignore  Dockerfile  Makefile  go.mod  go.sum
services/admin-dashboard/: Dockerfile  go.mod
services/rust-services/: .gitignore  Cargo.toml  Dockerfile  Makefile
services/rust-services/outbox-relay/: Cargo.toml
services/rust-services/proto/: Cargo.toml
services/rust-services/proto/src/: lib.rs
v-nest/: nest-cli.json  package-lock.json  package.json
v-rust/: Cargo.toml
(+86 files in other folders)
